syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package api;
option go_package = "./api";


message CreateBillMessage {
  string name = 1;
  double amount = 2;
  string category = 3;
  string user_id = 4;
  google.protobuf.Timestamp timestamp = 5;
}

service Api {
  rpc CreateBill (CreateBillMessage) returns (google.protobuf.Empty) {}
}
